--- a/index.html
+++ b/index.html
@@ -24,6 +24,44 @@
             </div>
         </section>
     </header>
+
+    <main>
+        <section class="motivation-container">
+            <div>
+                <header>
+                    <h1>Why Web Development??</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.</p>
+                </header>
+                <section class="items-container">
+                    <div class="item">
+                        <div>
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button><a href="#">Learn More</a></button>
+                        </div>
+                        <img src="./assets/Layer_1.png" alt="coding svg">
+                    </div>
+                    <div class="item second">
+                        <img src="./assets/Group 3.png" alt="designing svg">
+                        <div>
+                            <h2>I will help People by creating Modern Web System</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button><a href="#">Learn More</a></button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button><a href="#">Learn More</a></button>
+                        </div>
+                        <img src="./assets/Group 4.png" alt="statistics svg">
+                    </div>
+                </section>
+            </div>
+        </section>
+    </main>
 </body>
 
 <div style="height: 100vh;"></div>
