inspiration section acomplished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="item">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-grey">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <button><a href="#">Learn More</a></button>
                         </div>
                         <img src="./assets/Layer_1.png" alt="coding svg">
@@ -59,6 +59,18 @@
                         <img src="./assets/Group 4.png" alt="statistics svg">
                     </div>
                 </section>
+            </div>
+        </section>
+
+        <section class="inspiration-container">
+            <div class="inspiration-details">
+                <h1>My Inspiration</h1>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, ut.</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
+            </div>
+            <div class="inspiration-video">
+                <video src="./assets/Thinkin_NCS_Release_480p.mp4" controls loop></video>
             </div>
         </section>
     </main>
