target section added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <div class="item">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
-                            <p class="text-grey">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-grey">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
                             <button><a href="#">Learn More</a></button>
                         </div>
                         <img src="./assets/Layer_1.png" alt="coding svg">
@@ -72,6 +73,72 @@
             <div class="inspiration-video">
                 <video src="./assets/Thinkin_NCS_Release_480p.mp4" controls loop></video>
             </div>
+        </section>
+
+        <section class="target-container">
+            <section class="current-target">
+                <header>
+                    <h1>My Current Target</h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, distinctio.</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.</p>
+                </header>
+
+                <div class="items">
+                    <div class="item">
+                        <img src="./assets/html.png" alt="html logo">
+                        <h1>HTML</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="https://en.wikipedia.org/wiki/HTML">Learn More</a>
+                    </div>
+                    <div class="item">
+                        <img src="./assets/css.png" alt="css logo">
+                        <h1>CSS</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="https://en.wikipedia.org/wiki/CSS">Learn More</a>
+                    </div>
+                    <div class="item">
+                        <img src="./assets/js.png" alt="javascript logo">
+                        <h1>JAVASCRIPT</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="https://en.wikipedia.org/wiki/JavaScript">Learn More</a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="next-target">
+                <header>
+                    <h1>My Next Target</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </header>
+
+                <div class="items">
+                    <div class="item">
+                        <img src="./assets/react.png" alt="reactJs logo">
+                        <div>
+                            <h1>ReactJS</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./assets/nodejs.png" alt="nodeJS logo">
+                        <div>
+                            <h1>ReactJS</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="https://en.wikipedia.org/wiki/Node.js">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./assets/mongodb.png" alt="mongoDB logo">
+                        <div>
+                            <h1>MongoDB</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="https://en.wikipedia.org/wiki/MongoDB">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
