support section inserted

--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
                 </div>
             </section>
         </section>
+
+        <section class="support-container">
+            <div class="image">
+                <!-- <img src="./assets/handshake.jpg" alt="handshake image"> -->
+            </div>
+
+            <div class="contact-details">
+                <h1>I need Support</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <form>
+                    <input type="text" placeholder="Suggest any feedback for me">
+                    <input type="submit" value="Submit">
+                </form> 
+            </div>
+        </section>
     </main>
 </body>
 
