--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <h1>Awlad.H</h1>
-            <button><a href="#footer">Download Resume</a></button>
+            <button><a href="#">Download Resume</a></button>
         </nav>
         <section class="banner">
             <div>
@@ -20,7 +20,7 @@
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text.</p>
-                <button><a href="#">Contact with me</a></button>
+                <button><a href="#footer">Contact with me</a></button>
             </div>
         </section>
     </header>
@@ -156,8 +156,16 @@
             </div>
         </section>
     </main>
-</body>
 
-<div style="height: 100vh;"></div>
+    <footer id="footer">
+        <h3>An Open Commitment by Awlad Hossain</h3>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/mohammad.sahadat.587/"><img src="./assets/facebook.png" alt="facebook logo"></a>
+            <a href="https://github.com/mes-shahadat"><img src="./assets/github.png" alt="github logo"></a>
+            <a href="https://www.linkedin.com/in/mohammad-yasin-2443872b5/"><img src="./assets/linkedin-icon 1.png" alt="linked in logo"></a>
+        </div>
+    </footer>
+
+</body>
 
 </html>
