--- a/index.html
+++ b/index.html
@@ -9,36 +9,40 @@
 </head>
 
 <body>
+
     <header>
+
         <nav>
-            <h1>Awlad.H</h1>
+            <h1>Md. Yasin</h1>
             <button><a href="#">Download Resume</a></button>
         </nav>
         <section class="banner">
             <div>
                 <img src="./assets/Group.png" alt="coding svg">
                 <h1>"In the near future, I hope to become a Developer."</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text.</p>
+                <p>Aspire to become a developer by mastering coding, solving problems, and building innovative software
+                    through continuous learning and practical experience.</p>
                 <button><a href="#footer">Contact with me</a></button>
             </div>
         </section>
+
     </header>
 
     <main>
+
         <section class="motivation-container">
             <div>
                 <header>
                     <h1>Why Web Development??</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text.</p>
+                    <p>Web development combines creativity, problem-solving, and high demand, offering flexible,
+                        impactful work and continuous learning in a dynamic industry.</p>
                 </header>
                 <section class="items-container">
                     <div class="item">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
-                            <p class="text-grey">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry.</p>
+                            <p class="text-grey">I aim to use coding skills to innovate, solve problems, and make a
+                                global impact.</p>
                             <button><a href="#">Learn More</a></button>
                         </div>
                         <img src="./assets/Layer_1.png" alt="coding svg">
@@ -47,14 +51,16 @@
                         <img src="./assets/Group 3.png" alt="designing svg">
                         <div>
                             <h2>I will help People by creating Modern Web System</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p>I aim to assist others by developing modern, efficient web systems to enhance their
+                                digital experience.</p>
                             <button><a href="#">Learn More</a></button>
                         </div>
                     </div>
                     <div class="item">
                         <div>
-                            <h2>I will Do Coding and Change The World</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h2>I Will Learn and Grow as a Web Developer</h2>
+                            <p>I am committed to continuous learning, mastering new technologies, and evolving
+                                professionally as a web developer.</p>
                             <button><a href="#">Learn More</a></button>
                         </div>
                         <img src="./assets/Group 4.png" alt="statistics svg">
@@ -65,13 +71,16 @@
 
         <section class="inspiration-container">
             <div class="inspiration-details">
-                <h1>My Inspiration</h1>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, ut.</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text.</p>
+                <!-- <h1>My Inspiration</h1> -->
+                <h2>Guiding My Path to Excellence</h2>
+                <p>Under the guidance of my web development mentor, I am inspired to pursue excellence, mastering skills
+                    and achieving goals confidently.</p>
             </div>
             <div class="inspiration-video">
-                <video src="./assets/Thinkin_NCS_Release_480p.mp4" controls loop></video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=PlcBPWHp-yOzu8qd"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -79,29 +88,31 @@
             <section class="current-target">
                 <header>
                     <h1>My Current Target</h1>
-                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, distinctio.</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text.</p>
+                    <h2>Focused on Front-End Essentials: HTML, CSS, JavaScript</h2>
+                    <p>Mastering HTML, CSS, and JavaScript for proficient front-end web development skills.</p>
                 </header>
 
                 <div class="items">
                     <div class="item">
                         <img src="./assets/html.png" alt="html logo">
                         <h1>HTML</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="https://en.wikipedia.org/wiki/HTML">Learn More</a>
+                        <p>HTML is the foundation of web development, used to create and structure web pages with text,
+                            images, and links.</p>
+                        <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">Learn More</a>
                     </div>
                     <div class="item">
                         <img src="./assets/css.png" alt="css logo">
                         <h1>CSS</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="https://en.wikipedia.org/wiki/CSS">Learn More</a>
+                        <p>CSS enhances HTML by adding design and layout to web pages, controlling fonts, colors,
+                            spacing, and overall visual presentation.</p>
+                        <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">Learn More</a>
                     </div>
                     <div class="item">
                         <img src="./assets/js.png" alt="javascript logo">
                         <h1>JAVASCRIPT</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="https://en.wikipedia.org/wiki/JavaScript">Learn More</a>
+                        <p>JavaScript is a dynamic programming language used to create interactive effects, validate
+                            forms, and enhance user experience on web pages.</p>
+                        <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">Learn More</a>
                     </div>
                 </div>
             </section>
@@ -109,7 +120,8 @@
             <section class="next-target">
                 <header>
                     <h1>My Next Target</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p>Mastering React for front-end, Node.js for back-end, and MongoDB for database-driven web
+                        applications.</p>
                 </header>
 
                 <div class="items">
@@ -117,24 +129,30 @@
                         <img src="./assets/react.png" alt="reactJs logo">
                         <div>
                             <h1>ReactJS</h1>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                            <a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">Learn More</a>
+                            <p>React.js (or React) is a JavaScript library used for building user interfaces, focusing
+                                on component-based development for efficient and interactive web applications.</p>
+                            <a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)" target="_blank">Learn
+                                More</a>
                         </div>
                     </div>
                     <div class="item">
                         <img src="./assets/nodejs.png" alt="nodeJS logo">
                         <div>
-                            <h1>ReactJS</h1>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                            <a href="https://en.wikipedia.org/wiki/Node.js">Learn More</a>
+                            <h1>NodeJs</h1>
+                            <p>Node.js is a runtime environment that allows developers to run JavaScript on the
+                                server-side, enabling scalable and efficient backend development for web applications.
+                            </p>
+                            <a href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Learn More</a>
                         </div>
                     </div>
                     <div class="item">
                         <img src="./assets/mongodb.png" alt="mongoDB logo">
                         <div>
                             <h1>MongoDB</h1>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                            <a href="https://en.wikipedia.org/wiki/MongoDB">Learn More</a>
+                            <p>MongoDB is a NoSQL database management system known for its flexibility and scalability,
+                                storing data in JSON-like documents and suitable for modern, data-driven applications.
+                            </p>
+                            <a href="https://en.wikipedia.org/wiki/MongoDB" target="_blank">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -148,22 +166,28 @@
 
             <div class="contact-details">
                 <h1>I need Support</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>Seeking User Feedback to Improve and Enhance the Experience.</p>
                 <form>
                     <input type="text" placeholder="Suggest any feedback for me">
                     <input type="submit" value="Submit">
-                </form> 
+                </form>
             </div>
         </section>
+
     </main>
 
     <footer id="footer">
-        <h3>An Open Commitment by Awlad Hossain</h3>
+
+        <h3>An Open Commitment by <span style="color: green;">Mohammad Yasin</span></h3>
         <div class="social-icons">
-            <a href="https://www.facebook.com/mohammad.sahadat.587/"><img src="./assets/facebook.png" alt="facebook logo"></a>
-            <a href="https://github.com/mes-shahadat"><img src="./assets/github.png" alt="github logo"></a>
-            <a href="https://www.linkedin.com/in/mohammad-yasin-2443872b5/"><img src="./assets/linkedin-icon 1.png" alt="linked in logo"></a>
+            <a href="https://www.facebook.com/mohammad.sahadat.587/" target="_blank"><img src="./assets/facebook.png"
+                    alt="facebook logo"></a>
+            <a href="https://github.com/mes-shahadat" target="_blank"><img src="./assets/github.png"
+                    alt="github logo"></a>
+            <a href="https://www.linkedin.com/in/mohammad-yasin-2443872b5/" target="_blank"><img
+                    src="./assets/linkedin-icon 1.png" alt="linked in logo"></a>
         </div>
+
     </footer>
 
 </body>
